--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "bootstrap": "^4.5.3"
+        "bootstrap": "^4.5.3",
+        "jquery": "^3.5.1"
     }
 }
