--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "bootstrap": "^4.5.3",
-        "jquery": "^3.5.1"
+        "jquery": "^3.5.1",
+        "tailwindcss": "^2.0.2"
     }
 }
